--- a/src/main/resources/templates/company_investment-details.html
+++ b/src/main/resources/templates/company_investment-details.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div th:replace="fragment/company-dashboard.html :: sidebar"></div>
         <div class="investment-details">
-			            <h1>Investment Details</h1>
+            <h1>Investment Details</h1>
             <div class="investment-item" th:each="investment :${investmentlist}">
                 <div class="investment-item-icon">
                     <i class="fas fa-dollar-sign"></i>
@@ -19,9 +19,11 @@
                 <div class="investment-item-content">
                     <div class="investment-item-title">[[${investment.getUser().getFname()}]]</div>
                     <div class="investment-item-description" th:if="${investment.status eq 'refundable'}">
-						           [[${investment.status + " until- "+ investment.refundableUntil}]]</div>
+						[[${investment.status + " until- "+ investment.refundableUntil}]]
+                    </div>
 				    <div class="investment-item-description" th:unless="${investment.status eq 'refundable'}">
-						           [[${investment.status}]]</div>
+                        [[${investment.status}]]
+                    </div>
                 </div>
                 <div style="display:block;">
                     <div class="investment-item-amount">Rs. [[${#numbers.formatInteger(investment.quantity * investment.getCompany().getPrice_per_share(), 3, 'COMMA')}]]</div>
