--- a/src/main/resources/templates/fragment/head.html
+++ b/src/main/resources/templates/fragment/head.html
@@ -9,9 +9,12 @@
   <!--  <title th:replace="${title}">Sanolagani</title>-->
 
   <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-
-
-
+  <script>
+    function manageFund(){
+      document.getElementById("fundManagement").classList.toggle("show");
+      
+  }
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
