--- a/src/main/resources/static/css/company_table.css
+++ b/src/main/resources/static/css/company_table.css
@@ -11,7 +11,7 @@
 td,
 th{
     border: 1px solid #ddd;
-    padding: 2px;
+    padding: 2px 10px;
 }
 
 #customers tr:nth-child(even) {
@@ -26,6 +26,6 @@ th{
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: var(--color-blue);
+    background-color: #303030;
     color: white;
 }
