--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,11 +1,15 @@
+*{
+    font-family: 'Poppins', sans-serif;
+}
+
 .dashboard{
     margin-top: 1rem;
     margin-bottom: 2rem;
-    min-height: 50vh;
+    min-height: 80vh;
 }
 .dashboard__container{
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr;
     gap: 1rem;
     padding: 0 1rem;
 }
@@ -127,4 +131,13 @@
     display: flex;
     justify-content: space-between;
     font-size: 15px;
+}
+
+.diversification-text{
+    display:flex; 
+    flex-direction:column; 
+    justify-content:flex-start; 
+    padding-top:1rem; 
+    margin-left:5px; 
+    width:250px;
 }
