--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,18 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:include="fragment/head.html :: headerfiles">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
+
+	<head>
+		<meta charset="UTF-8">
+		<title>Insert title here</title>
+	</head>
+
 <body>
-	<header class='container header__container'
-		th:replace="fragment/header.html :: header"></header>
+	<header class='container header__container' th:replace="fragment/header.html :: header"></header>
 
 	<div class='full__width' th:insert="fragment/nav.html :: navbar">
 	</div>
-	<div class="m -3  col text-center">
-		<h2>Sorry, an unexpected error has occured!!</h2>
-	</div>
+
+	<!-- Permission Denied -->
+	<!-- css are on style.css -->
+	<section>
+		<div class="container notfound__container">
+			<h1>Oops!</h1>
+			<h2>Something went wrong!</h2>
+			<h4>Sorry, we could't take you there.</h4>
+			<a href="/">Go Back To Home Page</a>
+		</div>
+	</section>
+	<!-- Footer -->
+	<footer th:insert="fragment/footer.html :: footer"></footer>
 </body>
+
 </html>
