fixing css missing class

--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -27,23 +27,26 @@
 }
 .dashboard-title a{
     color: #000 !important;
+    transition: all 400ms ease-in-out;
 }
 .dashboard-title a:hover{
     margin-left: 10px;
+    transition: all 600ms ease-in-out;
 }
 /* drop down */
 .drop-btn{
     border: none;
     background: transparent;
-    font-size: 18px;
+    font-size: 17px;
     cursor: pointer;
     overflow: hidden;
+    transition: var(--transition);
 }
 .drop-btn span{
     font-size: 12px;
     border: 1px solid gray;
     border-radius: 3px;
-    padding: 2px;
+    padding: 1px;
     overflow: hidden;
 }
 .drop-btn:hover{
@@ -66,11 +69,13 @@
 }
 .fundManagementContent div a{
     color: #000 !important;
-    font-size: 17px;
+    font-size: 16px;
+    transition: var(--transition);
 
 }
 .fundManagementContent div a:hover{
     margin-left: 10px;
+    transition: var(--transition);
 }
 .show{
     display: block;
