--- a/src/main/resources/templates/changeinitialpassword.html
+++ b/src/main/resources/templates/changeinitialpassword.html
@@ -16,7 +16,7 @@
       </div>
       <div class="login__right">
         <form th:action="@{/change/initial/password}" method="post">
-          <h1 class="login__heading">Change Password</h1>
+          <h1 class="login__heading" style="text-decoration: underline; margin-bottom: 30px; letter-spacing: 0.5px;">Change Password</h1>
           <input class="input__box" type="email" th:placeholder="email" name="email" th:value="${email}" hidden
             readonly />
           <input class="input__box" type="password" placeholder="Old Password" name="oldpassword" id="old" required />
@@ -30,7 +30,7 @@
                 background-color: transparent;
               "></span>
 
-          <input class="btn btn__login" id="submit" type="submit" value="Change Password" required />
+          <input class="btn btn-primary btn__login" id="submit" type="submit" value="Change Password" required />
         </form>
       </div>
     </div>
