--- a/src/main/resources/templates/refund.html
+++ b/src/main/resources/templates/refund.html
@@ -8,20 +8,21 @@
     <link rel="stylesheet" href="css/load_fund.css">
 
     <title>Sanolagani</title>
+
     <head th:replace="fragment/head.html :: headerfiles"></head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
- 
+
 </head>
 
 <body>
- <header class='container header__container' th:replace="fragment/header.html :: header"></header>
-	<div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
+    <header class='container header__container' th:replace="fragment/header.html :: header"></header>
+    <div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
 
 
     <!-- Dashboard -->
- <!-- Dashboard -->
+    <!-- Dashboard -->
     <section class="dashboard">
         <div class=" dashboard__container">
             <!-- left dashboard -->
@@ -50,19 +51,22 @@
                 </div>
             </div>
             <!-- center dashboard -->
-            <div class="center__dashboard board">
+            <div class="center__load board">
                 <form th:action="@{/user/refundCollateral}" method="post">
                     <div class="bank_row">
-                        <label class="load-title" for="account_number">PHONE NUMBER <span style="color: red">*</span></label>
-                        <input class="load_input" type="number" id="account_number" min="0" th:value="${userphone}" oninput="validity.valid||(value='')" readonly required>
+                        <label class="load-title" for="account_number">PHONE NUMBER <span
+                                style="color: red">*</span></label>
+                        <input class="load_input" type="number" id="account_number" min="9" th:value="${userphone}"
+                            oninput="validity.valid||(value='')" readonly required>
                     </div>
                     <div class="bank_row">
                         <label class="load-title" for="refund_amount">AMOUNT <span style="color: red">*</span></label>
-                        <input class="load_input" name="amount" type="number" id="refund_amount" min="1" th:max="${totalcollateralamount}" oninput="validity.valid||(value='')" required>
+                        <input class="load_input" name="amount" type="number" id="refund_amount" min="1"
+                            th:max="${totalcollateralamount}" oninput="validity.valid||(value='')" required>
                     </div>
                     <div>
-                        <button type="submit" class="btn">Continue</button>
-                        <button type="reset" class="btn btn-danger">Reset</button>
+                        <button type="submit" class="btn btn-primary">Continue</button>
+                        <button type="reset" class="btn">Reset</button>
                     </div>
                 </form>
 
@@ -80,18 +84,18 @@
             </div>
         </div>
     </section>
-    <footer>
-        <footer th:insert="fragment/footer.html :: footer"></footer>
-    </footer>
-  
+
+    <footer th:insert="fragment/footer.html :: footer"></footer>
+
+
 
     <!-- Fund Management Dropdown Script -->
     <script>
-            function manageFund() {
-                document.getElementById("fundManagement").classList.toggle("show");
-            }
+        function manageFund() {
+            document.getElementById("fundManagement").classList.toggle("show");
+        }
 
-        </script>
+    </script>
 </body>
 
 </html>
