--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -43,6 +43,7 @@
             </div>
         </div>
     </section>
+    <footer th:insert="fragment/footer.html :: footer"></footer>
 
     <script>
         registerValidate = ()=>{
