--- a/src/main/resources/templates/company-list.html
+++ b/src/main/resources/templates/company-list.html
@@ -19,7 +19,7 @@
           </p>
           <div class="toggle-list" id="toggle-elements">
             <div class="dropdown-content" th:each="sector : ${sectorlist}">
-              <a href="#" class="dropdown-list">[[${sector}]]</a>
+              <a th:href="@{'/company/filter/'+${sector}}" class="dropdown-list">[[${sector}]]</a>
             </div>
           </div>
         </div>
