--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -119,6 +119,20 @@ h5 {
 	margin-top: -10px;
 }
 
+textarea {
+	resize: none;
+	width: 40vw;
+	padding: 10px;
+	border: 1px solid var(--color-gray);
+	border-radius: 5px;
+	height: 8rem;
+}
+.textarea-input{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
 .text-light {
 	color: var(--color-light);
 }
@@ -149,6 +163,7 @@ h5 {
     border: 1px solid #000;
     transition: var(--transition);
     font-size: 18px;
+	overflow: hidden;
 }
 .btn:hover{
 	background: #303030;
