reformat documet and added some stylings

--- a/src/main/resources/templates/admin_signup.html
+++ b/src/main/resources/templates/admin_signup.html
@@ -25,7 +25,7 @@
                         <h2>Sign Up</h2>
                     </a>
                 </div>
-                <form th:action="@{/admin/saveadmin}" method="post" onsubmit=" registerValidate()">
+                <form th:action="@{/saveadmin}" method="post" onsubmit=" registerValidate()">
                     <input class='input__box' type="text`" placeholder='First Name' name="fname" id="fname"  />
                     <input class='input__box' type="text" placeholder='Last Name' name="lname" id="lname"  />
                     <input class='input__box' type="email" placeholder='Email' name="email"  />
