--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,8 +13,8 @@
 	<!-- Most Momentum -->
 	<section class='momentum__section'>
 		<div class="container mostfunded__container">
-			<h2>Highest Invest Opportunity</h2>
-			<h5>Offerings that have raised the highest money</h5>
+			<h2>Highest Raising</h2>
+			<h5>Offerings that are raising high capital.</h5>
 			<div class="cards row">
 				<div class="card" th:each="company : ${companybasedoncapital}" th:if="${company.status eq 'raising'}">
 					<div th:replace="fragment/company-card.html :: card"></div>
@@ -26,8 +26,8 @@
 	<!-- Most Funded -->
 	<section class='mostfunded__section'>
 		<div class="container mostfunded__container">
-			<h2>Highest Invest Opportunity</h2>
-			<h5>Offerings that have raised the highest money</h5>
+			<h2>Recently Launched</h2>
+			<h5>Companies that are listed recently.</h5>
 			<div class="cards row">
 				<div class="card" th:each="company : ${companybasedondate}" th:if="${company.status eq 'raising'}">
 					<div th:replace="fragment/company-card.html :: card"></div>
@@ -54,7 +54,7 @@
 <section class='momentum__section'
 		sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY')">
 		<div class="container mostfunded__container">
-			<h2>Diversification</h2>
+			<h2>Diversify your Investments</h2>
 			<h5>Recommend companies based on diversification</h5>
 			<div class="cards row">
 
