--- a/src/main/resources/templates/changepassword.html
+++ b/src/main/resources/templates/changepassword.html
@@ -57,6 +57,8 @@
     if (pass1 === pass2) {
       error.innerText = "";
       submit.disabled = false;
+    }else{
+      submit.disabled = true;
     }
   }
 </script>
