--- a/src/main/resources/templates/documents/table.html
+++ b/src/main/resources/templates/documents/table.html
@@ -1,33 +1,36 @@
 <!-- template.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
     <title>My Template</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="container">
         <div>Table name</div>
-        <table class="table table-striped" >
-        <thead >
-        <tr>
-            <th scope="col" th:each="keys : ${table.get(0)}">
-                <span th:text="${keys.getKey()}"></span>
-            </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="row : ${table}">
-            <td th:each="cell : ${row}">
-                <span th:text="${cell.getValue()}"></span>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <div class="flex">
-        <button type="button" class="btn btn-primary">Previous</button>
-        <button type="button" class="btn btn-secondary">Next</button>
-    </div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col" th:each="keys : ${table.get(0)}">
+                        <span th:text="${keys.getKey()}"></span>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="row : ${table}">
+                    <td th:each="cell : ${row}">
+                        <span th:text="${cell.getValue()}"></span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="flex">
+            <button type="button" class="btn btn-primary">Previous</button>
+            <button type="button" class="btn btn-secondary">Next</button>
+        </div>
     </div>
 </body>
-</html>
+
