--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -16,7 +16,7 @@
                 <img th:src="@{'/photos/register.png'}" alt="image" />
             </div>
             <div class="login__right">
-               <!--<span id="error-msg"></span> --> 
+                <!--<span id="error-msg"></span> --> 
                 <div class="heading__background">
                     <a href="user_login.html">
                         <h2>Login</h2>
@@ -25,26 +25,31 @@
                         <h2>Sign Up</h2>
                     </a>
                 </div>
-                <form th:action="@{/register}" method="post" onsubmit=" registerValidate()">
-                    <input class='input__box' type="text`" placeholder='First Name' name="fname" id="fname"  />
-                    <input class='input__box' type="text" placeholder='Last Name' name="lname" id="lname"  />
-                    <input class='input__box' type="email" placeholder='Email' name="email"  />
-                    <input class='input__box' type="number" placeholder='Mobile Number' name="mobile" id="mobile"  />
+                <p id="error-msg"></p>
+                <form th:action="@{/register}" method="post" id="signup-form">
+                    <input class='input__box' type="text`" placeholder='First Name' name="fname" id="fname" />
+                    <input class='input__box' type="text" placeholder='Last Name' name="lname" id="lname" />
+                    <input class='input__box' type="email" placeholder='Email' name="email" />
+                    <input class='input__box' type="text" placeholder='Mobile Number' name="phnum" id="mobile" />
 
-                    <input class='input__box' type="text`" placeholder='Address' name="address" id="address"  />
+                    <input class='input__box' type="text`" placeholder='Address' name="address" id="address" />
                     <!-- <span id="password-error"> ** password</span> -->
-                    <input class='input__box' type="password" placeholder='Password' id="password" name="password"
-                         />
-                    <input class='input__box' type="password" placeholder='Confirm Password' id="cpassword"
-                         name="c_password"  />
+                    <input class='input__box' type="password" placeholder='Password' id="password" name="password" />
+                    <input class='input__box' type="password" placeholder='Confirm Password' id="cpassword" name="c_password" />
                     <input class='btn btn-primary btn__login' type="submit" value='Sign Up'  />
-                    <!-- <button class="btn btn__login" type="submit">Signup</button> -->
                 </form>
             </div>
         </div>
     </section>
 
     <script>
+        document.getElementById('signup-form').addEventListener('submit', e => {
+            e.preventDefault();
+            if(registerValidate()==true){
+                document.getElementById('signup-form').submit();
+            }
+        });
+
         registerValidate = ()=>{
             let fname = document.getElementById('fname').value;
             let lname = document.getElementById('lname').value;
@@ -53,16 +58,16 @@
             let password = document.getElementById('password').value;
             let cpassword = document.getElementById('cpassword').value;
 
-            let fnamecheck = /^[a-zA-Z ]{3,}$/;
+            let fnamecheck = /^[a-zA-Z]{3,}$/;
             let lnamecheck = /^[a-zA-Z]{3,}$/;
-            // let emailcheck = /^[A-Za-z_.]{3,}@[A-Za-z]{3,}[.]{1}[A-Za-z]{2,6}$/;
-            let mobilecheck = /^[9]{1}[78]{1}[0-9]{8}$/;
-            let addresscheck = /^[a-zA-Z0-9 ]{3,}$/;
+            let mobilecheck = /^9[678]\d{8}$/;
+            let addresscheck = /^[a-zA-Z0-9\s,-]{3,}$/;
             let passwordcheck = /^(?=.*[0-9])(?=.*[!@#$%^*])[a-zA-Z0-9!@#$%^&*]{8,16}$/;
 
             if(fnamecheck.test(fname)){
                 document.getElementById('error-msg').innerHTML = "";
             }else{
+
                 document.getElementById('error-msg').innerHTML = "** Enter valid first name";
                 return false;
             }
@@ -73,13 +78,6 @@
                 document.getElementById('error-msg').innerHTML = "** Enter valid lastname";
                 return false;
             }
-
-            // if(emailcheck.test(email)){
-            //     document.getElementById('error-msg').innerHTML = "";
-            // }else{
-            //     document.getElementById('error-msg').innerHTML = "** Enter valid email";
-            //     return false;
-            // }
 
             if(mobilecheck.test(mobile)){
                 document.getElementById('error-msg').innerHTML = "";
@@ -101,17 +99,18 @@
                 document.getElementById('error-msg').innerHTML = "** Enter valid password";
                 return false;
             }
-            // if(cpassword.match(password)){
-            //     document.getElementById('error-msg').innerHTML = "";
-            // }else{
-            //     document.getElementById('error-msg').innerHTML = "** Password Not Matched.";
-            // }
+            if(password.length < 8){
+                document.getElementById('error-msg').innerHTML = "** Password must be atleast 8 characters";
+                return false;
+            }
 
-            if(password != cpassword){
+            if(password !== cpassword){
                 document.getElementById('error-msg').innerHTML = "** Password Not matched";
                 return false;
             }
-        }
+            console.log("success");
+            return true;
+        };
     </script>
 
     
